# Mime-Framework

./: .env  Cargo.toml  README.md  watch.ps1
docs/: base_concepts.md  dependency-injection.md  spring_framework_architecture.md
mime-core/: Cargo.toml
mime-core/src/: lib.rs
mime-core/src/helpers/: mod.rs  read_environment_variables.rs  set_tracing_subscriber.rs
mime-core/src/old3/: collection.rs  configuration_manager.rs  repository.rs
mime-core/src/old3/component/: component_scope.rs  component_type.rs  mod.rs
mime-core/src/old3/configuration_manager/: default_configuration_manager.rs  mod.rs
mime-core/src/old3/container/: mod.rs
mime-core/src/old3/old/: configuration_manager.rs  data_collector.rs  dependency_container.rs  email_message_service.rs  lib.rs  message_service.rs  simple_data_collector.rs  sql_data_collector.rs
mime-core/src/old3/old_2/: container.rs  lib.rs  notifier_service.rs  notifier_service_impl.rs  user_repository.rs  user_repository_impl.rs  user_service.rs  user_service_impl.rs
mime-core/src/old3/sample/: mod.rs
mime-core/src/old3/utils/: mod.rs  set_tracing_subscriber.rs
mime-core/src/services/: configuration_service.rs  core_service.rs  mod.rs
mime-core/src/services/implementations/: default_configuration_service.rs  default_core_service.rs  mod.rs
mime-data/: Cargo.toml
mime-data/src/: lib.rs
mime-data/src/services/: datasource_service.rs  migration_service.rs  mod.rs
mime-data/src/services/implementations/: default_migration_service.rs  mod.rs  postgres_datasource_service.rs
mime-security/: Cargo.toml  README.md
mime-security/src/: lib.rs
mime-security/src/entities/: authority.rs  mod.rs  user.rs
mime-security/src/entities/collections/: mod.rs  user_collection.rs
mime-security/src/entities/repositories/: mod.rs  user_repository.rs
mime-security/src/entities/repositories/implementations/: mod.rs  sample_user_repository.rs
mime-security/src/migrations/: create_acl_class_table.rs  create_acl_entry_table.rs  create_acl_object_identity_table.rs  create_acl_sid_table.rs  create_authorities_table.rs  create_group_authorities_table.rs  create_group_members_table.rs  create_groups_table.rs  create_oauth2_authorized_client_table.rs  create_persistent_logins_table.rs  create_users_table.rs  mod.rs
mime-security/src/routes/: create_user.rs  edit_user.rs  list_users.rs  mod.rs  new_user.rs
mime-security/src/view/: mod.rs
mime-security/templates/: user_layout.html.tera
mime-security/templates/user/: edit.html.tera  index.html.tera  new.html.tera
mime-web/: Cargo.toml
mime-web/src/: app_state.rs  lib.rs
mime-web/src/helpers/: load_template_files.rs  mod.rs
mime-web/src/routes/: dashboard.rs  mod.rs
mime-web/src/services/: web_service.rs
mime-web/src/services/implementations/: default_web_service.rs  mod.rs
mime-web/src/types/: app_state.rs  flash.rs  mod.rs  params.rs  route_items.rs  route_method.rs  template_path.rs
mime-web/src/view/: mod.rs
mime-web/static/admin_theme/: package-lock.json  package.json  vite.config.js
mime-web/static/admin_theme/src/: style.css
mime-web/static/css/: style.css
mime-web/static/images/: icon.ai  logo.ai
mime-web/templates/: dashboard.html.tera  index.html.tera  layout.html.tera
src/: initiate_services.rs  load_packages.rs  main.rs  service_container.rs
