[package]
name = "mime"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
publish = false
authors = ["Amin Latifkar <amin.latifkar@gmail.com>"]
repository = "https://github.com/aminlatif/Mime-Framework"


[workspace]
members = [".", "mime-core",]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[dependencies]
tokio = { workspace = true, features = ["full"] }
