[package]
name = "mime"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
publish = false
authors = ["Amin Latifkar <amin.latifkar@gmail.com>"]
repository = "https://github.com/aminlatif/Mime-Framework"


[workspace]
members = [".", "mime-core", "mime-data", "mime-web"]

[workspace.dependencies]
anyhow = { version =  "1.0" }
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = { version = "0.4.42" }
dotenvy = "0.15.7"
rand = { version = "0.9.2" }
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tera = { version = "1.20.1" }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = { version = "0.11.0" }
tower-http = { version = "0.6.6", features = ["compression-gzip", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
mime-core = { path = "mime-core" }
mime-data = { path = "mime-data" }
mime-web = { path = "mime-web" }

